--- a/src/resource/css/alexandra.css
+++ b/src/resource/css/alexandra.css
@@ -1,1 +1,44 @@
-/* BOOM It will load later*/
+.admin-navigation {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.admin-navigation > li {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-navigation > li > a {
+    text-decoration: none;
+    padding: 15px 20px;
+    border-bottom: 1px solid transparent;
+}
+.admin-navigation > li > a.active {
+    border-color: #f5f5f5;
+}
+
+.admin-navigation > li:not(:first-child) {
+    border-left: 1px solid #e5e5e5;
+}
+
+.tab-content {
+
+}
+.tab-pane {
+    display: none;
+    background-color: #f5f5f5;
+    padding: 15px;
+    /*padding: 20px;*/
+}
+
+.tab-pane.active {
+    display: block;
+}
